# actix-diesel-crud

./: .env  .gitignore  Cargo.toml  README.md
migrations/2023-04-16-101953_users/: up.sql
src/: handler.rs  main.rs  models.rs  schema.rs  user_error.rs
