[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
uuid = { version = "1.3.1", features = ["serde" , "v4"] }
diesel = { version = "2.0.3", features = ["postgres" , "uuid" , "r2d2" , "chrono"] }
dotenvy = "0.15"